Dynamic stack allocator to fix memory allocation

--- a/craytracer/CMakeLists.txt
+++ b/craytracer/CMakeLists.txt
@@ -8,13 +8,13 @@ set(SOURCES ${SRC_FILES})
 add_library(${LIB_NAME} STATIC ${SOURCES})
 target_link_libraries(${LIB_NAME} m)
 target_link_options(${LIB_NAME} PUBLIC -fsanitize=undefined)
-target_compile_options(${LIB_NAME} PUBLIC -Wall -Werror -Wpedantic -Wextra -fsanitize=undefined -DNDEBUG)
+target_compile_options(${LIB_NAME} PUBLIC -Wall -Werror -Wpedantic -Wextra -fsanitize=undefined -DNDEBUG -O3)
 target_include_directories(${LIB_NAME} PUBLIC ${SOURCE_DIR}/include)
 
 add_executable(${BINARY} main.c)
 target_link_libraries(${BINARY} m ${LIB_NAME})
 target_link_options(${BINARY} PUBLIC -fsanitize=undefined)
-target_compile_options(${BINARY} PUBLIC -Wall -Werror -Wpedantic -Wextra -fsanitize=undefined -DNDEBUG)
+target_compile_options(${BINARY} PUBLIC -Wall -Werror -Wpedantic -Wextra -fsanitize=undefined -DNDEBUG -O3)
 target_include_directories(${BINARY} PUBLIC ${SOURCE_DIR}/include)
 
 # debug
