--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 project(pdc VERSION 0.0)
 
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
+find_package(OpenMP REQUIRED)
+
 conan_basic_setup(TARGETS)
 
 set(LIB_NAME ${CMAKE_PROJECT_NAME}lib)
